# ltl-simplifier

./: .gitignore  CMakeLists.txt
src/: main.cpp
